@@ -2291,14 +2291,6 @@ genFunction (iCode * ic)
       return;
   }
 
-  /* if critical function then turn interrupts off */
-  if (IFFUNC_ISCRITICAL (ftype))
-    {
-      emitcode ("mov", "c,ea");
-      emitcode ("push", "psw"); /* save old ea via c in psw */
-      emitcode ("clr", "ea");
-    }
-
   /* here we need to generate the equates for the
      register bank if required */
   if (FUNC_REGBANK (ftype) != rbank)
@@ -2575,7 +2567,14 @@ genFunction (iCode * ic)
       emitcode ("add", "a,#0x%02x", ((char) sym->xstack & 0xff));
       emitcode ("mov", "_spx,a");
     }
-
+  
+  /* if critical function then turn interrupts off */
+  if (IFFUNC_ISCRITICAL (ftype))
+    {
+      emitcode ("mov", "c,ea");
+      emitcode ("push", "psw"); /* save old ea via c in psw */
+      emitcode ("clr", "ea");
+    }
 }
 
 /*-----------------------------------------------------------------*/
@@ -2591,6 +2590,12 @@ genEndFunction (iCode * ic)
       emitcode(";", "naked function: no epilogue.");
       return;
   }
+      
+  if (IFFUNC_ISCRITICAL (sym->type))
+    {
+      emitcode ("pop", "psw"); /* restore ea via c in psw */
+      emitcode ("mov", "ea,c");
+    }
 
   if (IFFUNC_ISREENT (sym->type) || options.stackAuto)
     {
@@ -2715,12 +2720,6 @@ genEndFunction (iCode * ic)
       if (!inExcludeList ("acc"))
 	emitcode ("pop", "acc");
 
-      if (IFFUNC_ISCRITICAL (sym->type))
-        {
-	  emitcode ("pop", "psw"); /* restore ea via c in psw */
-	  emitcode ("mov", "ea,c");
-        }
-
       /* if debug then send end of function */
       if (options.debug && currFunc)
 	{
@@ -2739,12 +2738,6 @@ genEndFunction (iCode * ic)
     }
   else
     {
-      if (IFFUNC_ISCRITICAL (sym->type))
-        {
-	  emitcode ("pop", "psw"); /* restore ea via c in psw */
-	  emitcode ("mov", "ea,c");
-        }
-
       if (IFFUNC_CALLEESAVES(sym->type))
 	{
 	  int i;
